# citest

./: CMakeLists.txt  README.md
dockerfiles/CentOS/: Dockerfile
dockerfiles/VS2017/: Dockerfile  git.inf
src/: main.cpp
